--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyperstyles",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A wrapper for virtual-hyperscript that enables CSS Modules support.",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,10 @@
   ],
   "author": "Colin Gourlay",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/colingourlay/hyperstyles"
+  },
   "dependencies": {
     "lodash": "^3.10.1",
     "virtual-dom": "^2.1.1",
