--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyperstyles",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A wrapper for virtual-hyperscript that enables CSS Modules support.",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,7 @@
     "url": "https://github.com/colingourlay/hyperstyles"
   },
   "dependencies": {
-    "lodash": "^3.10.1",
+    "lodash.reduce": "^3.1.2",
     "virtual-dom": "^2.1.1",
     "x-is-array": "^0.1.0"
   },
